--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "through2": "*",
     "markdown-it": "*",
     "less": "^2.1.1"
   },
   "devDependencies": {
+    "through2": "*",
     "markdown-it": "*",
     "less": "^2.1.1"
   },
